# operatingsysfinal

OS-main/: README.md
OS-main/server/: CMakeLists.txt  main.cpp
OS-main/server/include/business/: PaperService.h
OS-main/server/include/platform/: ThreadPool.h  socket_compat.h
OS-main/server/include/protocol/: FSProtocol.h  RealFileSystemAdapter.h
OS-main/server/src/business/: PaperService.cpp
OS-main/server/src/protocol/: CLIProtocol.cpp  FSProtocol.cpp  ProtocolFactory.cpp  RealFileSystemAdapter.cpp
OS-main/server/test/: test_client.py  ultimate_test.py
filesystem2/: CMakeLists.txt
filesystem2/include/: Allocator.h  Cache.h  Directory.h  DiskImage.h  FS.h  Snapshot.h
filesystem2/src/: APIexample.cpp  Allocator.cpp  Cache.cpp  DiskImage.cpp  FS.cpp  Snapshot.cpp  mkfs_main.cpp  test_allocator.cpp  test_cache_integration.cpp  test_diskimage.cpp  test_fs.cpp  test_snapshot.cpp
revise002/: CHANGES.md  README.md  filechange.md
revise002/client/: CMakeLists.txt
revise002/client/include/cli/: CliApp.h
revise002/client/include/net/: TcpTransport.h
revise002/client/include/protocol/: ClientProtocol.h
revise002/client/include/session/: SessionStore.h
revise002/client/src/: main.cpp
revise002/client/src/cli/: CliApp.cpp
revise002/client/src/net/: TcpTransport.cpp
revise002/client/src/protocol/: ClientProtocol.cpp
revise002/client/src/session/: SessionStore.cpp
revise002/client/test/: test_client_smoke.cpp
revise002/filesystem/: README.md
revise002/filesystem/include/: Allocator.h  FSTypes.h  Snapshot.h
revise002/filesystem/src/: Allocator.cpp  Directory.cpp  DiskImage.cpp  FS.cpp  Snapshot.cpp  test_cache.cpp  test_directory.cpp
revise002/server/: CMakeLists.txt  main.cpp
revise002/server/bench/: bench_client.cpp
revise002/server/include/auth/: auth.h
revise002/server/include/net/: net.h
revise002/server/include/protocol/: protocol.h
revise002/server/include/services/: paper.h
revise002/server/include/storage/: admin_fs.h  storage.h
revise002/server/src/auth/: auth.cpp
revise002/server/src/net/: net.cpp
revise002/server/src/protocol/: protocol.cpp
revise002/server/src/services/: paper.cpp
revise002/server/src/storage/: admin_fs.cpp
